<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="com.example.chucknorrisjokes.presentation.exception.Status"/>

        <variable
            name="viewModel"
            type="com.example.chucknorrisjokes.ui.main.MainViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/lytOffline"
            layout="@layout/lyt_offline"
            android:visibility="@{viewModel.networkState.status==Status.FAILED?View.VISIBLE:View.GONE}"
            app:network="@{viewModel.networkState.failure.msg}"/>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motion_base"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/scene_main"
            android:visibility="@{viewModel.networkState.status == Status.FAILED?View.GONE:View.VISIBLE}">

            <include
                android:id="@+id/ignoreThisLayout"
                layout="@layout/lyt_joke_share"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.45"
                app:bgColor="@{viewModel.joke.color}"
                app:textJoke="@{viewModel.joke.value}"
                app:idJoke="@{viewModel.joke.id}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:titleTextColor="@color/white"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/toolbarTitle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.title}"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:id="@+id/actionSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_search"
                        android:padding="16dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:transitionName="@string/transition_search_back"/>

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

            <include
                android:id="@+id/lytButton"
                layout="@layout/lyt_content_button"
                app:layout_constraintTop_toBottomOf="@id/cardJoke"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:networkState="@{viewModel.networkState}"/>

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:src="@drawable/img_chucknorris_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/cardJoke"
                app:layout_constraintBottom_toTopOf="@id/textView"
                app:layout_constraintHeight_percent="0.1"
                android:layout_marginTop="16dp"
                android:elevation="1dp"
                android:transitionName="@string/transition_img_splash"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@{viewModel.joke.value}"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="40sp"
                app:autoSizeTextType="uniform"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLogo"
                app:layout_constraintHeight_percent="0.28"
                android:elevation="1dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardJoke"
                lyt_color="@{viewModel.joke.color}"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="16dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="16dp"

                app:layout_constraintHeight_percent="0.45"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/lytButton"/>

            <View
                android:id="@+id/spacer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/rvCategory"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lytButton"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:overScrollMode="never"
                android:nestedScrollingEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>

            <com.example.chucknorrisjokes.presentation.customview.RoundLinearLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/spacer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:orientation="vertical"
                android:background="@drawable/txt_round">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="32dp"
                    android:paddingBottom="16dp"
                    android:text="@string/select_category"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />
            </com.example.chucknorrisjokes.presentation.customview.RoundLinearLayout>

            <ImageButton
                android:id="@+id/imgSwipeArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/title_layout"
                app:layout_constraintBottom_toBottomOf="@id/title_layout"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/ic_baseline_double_arrow"
                android:tint="@android:color/background_dark"
                android:elevation="3dp"
                android:padding="12dp"
                android:layout_marginRight="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"/>

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </FrameLayout>

</layout>