<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="modelJoke"
            type="com.example.chucknorrisjokes.data.remote.model.ModelJoke" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/lytRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            lyt_color="@{modelJoke.color}"
            android:transitionName="@{@string/cardJoke(String.valueOf(modelJoke.id))}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/txtItemJoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="24dp"
                android:paddingLeft="24dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@{modelJoke.value}"
                android:transitionName="@{@string/textJoke(String.valueOf(modelJoke.id))}"/>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>