...
            app:title="@string/title_detail_joke"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvJokes"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
